# Timeline

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
app/: CMakeLists.txt  FontAwesome.cpp  FontAwesome.h  MainWindow.cpp  MainWindow.h  Timeline.cpp
app/style/: CMakeLists.txt  docking.css  style.qrc  ui.css
app/ts/: CMakeLists.txt
app/widget/: CMakeLists.txt
app/widget/clickable_layout/: CMakeLists.txt  ClickableLayout.h
app/widget/home/: CMakeLists.txt  Home.cpp  Home.h
app/widget/project_setup/: CMakeLists.txt  ProjectSetup.cpp  ProjectSetup.h
ext/: CMakeLists.txt
